Improve Swagger
